--- a/src/views/includes/head.pug
+++ b/src/views/includes/head.pug
@@ -2,4 +2,4 @@ head
   meta(charset = 'utf-8')
   meta(name='viewport', content="initial-scale=1.0, width=device-width")
   title Front app
-  link(rel='stylesheet' href='/css/style.min.css')
+  link(rel='stylesheet' href='css/style.min.css')
